--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             justify-content: space-between;
             align-items: center;
             border-bottom: 3px solid #ffd700;
+            position: relative;
         }
 
         .logo-title {
@@ -65,7 +66,6 @@
         header nav ul {
             list-style: none;
             display: flex;
-            margin-right: 20px;
         }
 
         header nav ul li {
@@ -77,6 +77,7 @@
             text-decoration: none;
             text-transform: uppercase;
             font-size: 18px;
+            font-weight: 500;
         }
 
         header nav ul li a:hover {
@@ -144,41 +145,87 @@
             padding: 20px 0;
         }
 
-        /* Responsive Design */
+        /* Right-Side Menu Styling */
         @media (max-width: 768px) {
+            header {
+                flex-direction: row;
+                justify-content: space-between;
+            }
+
             .menu-toggle {
                 display: block;
+                position: absolute;
+                right: 20px;
             }
 
             header nav ul {
-                display: none;
+                display: flex;
                 flex-direction: column;
                 background: #333;
-                position: absolute;
-                top: 70px;
-                right: 0;
-                width: 200px;
-                padding: 20px;
+                position: fixed;
+                top: 0;
+                right: -250px; /* Initially hidden off-screen */
+                height: auto;
+                min-height: 200px;
+                width: 250px;
+                padding: 15px;
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+                transition: right 0.3s ease;
+                border-radius: 8px 0 0 8px;
             }
 
             header nav ul.show {
-                display: flex;
+                right: 0; /* Visible when menu is opened */
+            }
+
+            header nav ul li {
+                margin: 10px 0;
+            }
+
+            header nav ul li a {
+                font-size: 18px;
+                padding: 10px;
+                background-color: #444;
+                color: #fff;
+                border-radius: 4px;
+                text-align: center;
+                display: block;
+                width: 100%;
+                transition: background-color 0.2s;
+            }
+
+            header nav ul li a:hover {
+                background-color: #555;
+            }
+
+            /* Back button at the bottom */
+            header nav ul .back-button {
+                display: block;
+                margin-top: 15px;
+                color: #fff;
+                cursor: pointer;
+                font-size: 18px;
+                padding: 10px;
+                background-color: #262626;
+                border-radius: 5px;
+                text-align: center;
+            }
+
+            header nav ul .back-button:hover {
+                background-color: #444;
             }
 
             .product {
                 width: calc(100% - 40px);
             }
 
-            header {
-                flex-direction: column;
-            }
-
             .logo-title {
-                justify-content: center;
+                width: 70%;
             }
 
             header h1 {
-                margin-top: 10px;
+                font-size: 20px;
+                margin: 0;
             }
         }
     </style>
@@ -199,6 +246,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li class="back-button" onclick="toggleMenu()">Back</li> <!-- Back Button -->
             </ul>
         </nav>
     </header>
@@ -212,13 +260,13 @@
                 <button class="add-to-cart"><i class="fas fa-cart-plus"></i> Add to Cart</button>
             </div>
             <div class="product" data-id="2">
-                <img src="camera.jpg" alt="Product 2">
-                <h2>Cemera</h2>
+                <img src="phone.png" alt="Product 2">
+                <h2>Camera</h2>
                 <p>$100.00</p>
                 <button class="add-to-cart"><i class="fas fa-cart-plus"></i> Add to Cart</button>
             </div>
             <div class="product" data-id="3">
-                <img src="phone.jpg" alt="Product 3">
+                <img src="camera.jpg" alt="Product 3">
                 <h2>Phone</h2>
                 <p>$150.00</p>
                 <button class="add-to-cart"><i class="fas fa-cart-plus"></i> Add to Cart</button>
