--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
                 <button class="add-to-cart"><i class="fas fa-cart-plus"></i> Add to Cart</button>
             </div>
             <div class="product" data-id="2">
-                <img src="phone.png" alt="Product 2">
+                <img src="camera.jpg" alt="Product 2">
                 <h2>Camera</h2>
                 <p>$100.00</p>
                 <button class="add-to-cart"><i class="fas fa-cart-plus"></i> Add to Cart</button>
             </div>
             <div class="product" data-id="3">
-                <img src="camera.jpg" alt="Product 3">
+                <img src="phone.jpg" alt="Product 3">
                 <h2>Phone</h2>
                 <p>$150.00</p>
                 <button class="add-to-cart"><i class="fas fa-cart-plus"></i> Add to Cart</button>
